[tool.poetry]
name = "fastapi-google-login"
version = "0.1.0"
description = ""
authors = ["githubcustomerserviceistrash <97557694+githubcustomerserviceistrash@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
authlib = "^1.3.2"
starlette = "^0.38.2"
itsdangerous = "^2.2.0"
httpx = "^0.27.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
